--- a/package.json
+++ b/package.json
@@ -1,41 +1,19 @@
 {
-	"name": "vue3-spinners",
-	"version": "0.0.1",
-	"description": "Spinners for Vue 3.",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/leonzalion/vue3-spinners.git"
-	},
-	"homepage": "https://github.com/leonzalion/vue3-spinners#readme",
-	"author": {
-		"name": "Leon Si",
-		"email": "contact@leonzalion.com",
-		"url": "https://leonzalion.com"
-	},
-	"type": "module",
-	"exports": "./src/index.ts",
+	"name": "vue3-spinners-monorepo",
 	"scripts": {
-		"release": "lionp",
 		"prepare": "lion-git-hooks",
-		"build": "node-ts ./scripts/build.ts",
-		"start": "node-ts ./src/index.ts",
-		"test": "vitest run",
-		"lint": "eslint --cache --fix .",
-		"prettier": "prettier --write .",
-		"tc": "tsc --noEmit"
+		"build": "pnpm run build --filter=./vue3-spinners",
+		"lint": "pnpm recursive run lint",
+		"prettier": "pnpm recursive run prettier",
+		"tc": "pnpm recursive run tc"
 	},
 	"devDependencies": {
 		"@leonzalion/configs": "^1.2.25",
-		"@types/node": "^17.0.23",
+		"@types/node": "^17.0.25",
 		"desm": "^1.2.0",
-		"eslint-define-config": "^1.3.0",
+		"eslint-define-config": "^1.4.0",
 		"execa": "^6.1.0",
-		"lion-system": "^1.0.17",
-		"typescript": "^4.6.3",
-		"vitest": "^0.8.3"
-	},
-	"publishConfig": {
-		"directory": "dist"
+		"lion-system": "^1.3.15",
+		"typescript": "^4.6.3"
 	}
 }
