--- a/vue3-spinners/package.json
+++ b/vue3-spinners/package.json
@@ -16,6 +16,7 @@
 	"type": "module",
 	"exports": "./src/index.ts",
 	"scripts": {
+		"preinstall": "pnpm build",
 		"release": "lionp",
 		"build": "node-ts ./scripts/build.ts",
 		"start": "node-ts ./src/index.ts",
