--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,3 @@
 {
-	"extends": "@leonzalion/configs/tsconfig.json",
-	"compilerOptions": {
-		"outDir": "dist",
-		"baseUrl": ".",
-		"paths": {
-			"~/*": ["./src/*"]
-		}
-	},
-	"include": ["./src", "./typings"]
+	"extends": "@leonzalion/configs/tsconfig.json"
 }
