--- a/vue3-spinners/package.json
+++ b/vue3-spinners/package.json
@@ -26,6 +26,7 @@
 		"tc": "tsc --noEmit"
 	},
 	"devDependencies": {
+		"@vue/runtime-core": "^3.2.33",
 		"vitest": "^0.8.3",
 		"vue": "^3.2.33"
 	},
