--- a/demo/package.json
+++ b/demo/package.json
@@ -7,13 +7,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckpack/vue-color": "^1.1.9",
     "vue": "^3.2.25",
-		"vue3-spinners": "link:../vue3-spinners/dist"
+    "vue-accessible-color-picker": "^4.0.0",
+    "vue3-spinners": "link:../vue3-spinners/dist",
+    "windicss": "^3.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
+    "vite-plugin-windicss": "^1.8.4",
     "vue-tsc": "^0.34.7"
   }
 }
