--- a/demo/tsconfig.eslint.json
+++ b/demo/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["src", ".eslintrc.cjs", "vite.config.ts"]
+	"include": ["src", ".eslintrc.cjs", "vite.config.ts", "windi.config.ts"]
 }
