feat: github pages

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"prepare": "lion-git-hooks",
 		"build": "pnpm run build --filter=./vue3-spinners",
+		"build:demo": "pnpm run build --filter=./demo",
 		"lint": "pnpm recursive run lint",
 		"prettier": "pnpm recursive run prettier",
 		"tc": "pnpm recursive run tc"
