chore: release script

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "vue3-spinners-monorepo",
 	"private": true,
 	"scripts": {
+		"release": "pnpm run release --filter=./vue3-spinners",
 		"prepare": "lion-git-hooks",
 		"build": "pnpm run build --filter=./vue3-spinners",
 		"build:demo": "pnpm run build --filter=./demo",
