--- a/vue3-spinners/package.json
+++ b/vue3-spinners/package.json
@@ -16,7 +16,7 @@
 	"type": "module",
 	"exports": {
 		".": "./src/index.ts",
-		"./*": "./*"
+		"./spinners.css": "./spinners.css"
 	},
 	"scripts": {
 		"preinstall": "pnpm build",
