--- a/vue3-spinners/tsconfig.eslint.json
+++ b/vue3-spinners/tsconfig.eslint.json
@@ -1,10 +1,4 @@
 {
 	"extends": "./tsconfig.json",
-	"include": [
-		"src",
-		"test",
-		"scripts",
-		".eslintrc.cjs",
-		"vitest.config.ts"
-	]
+	"include": ["src", "test", "scripts", ".eslintrc.cjs", "vitest.config.ts"]
 }
