--- a/vue3-spinners/tsconfig.json
+++ b/vue3-spinners/tsconfig.json
@@ -7,9 +7,7 @@
 			"~/*": ["./src/*"]
 		},
 		"jsx": "preserve",
-		"types": [
-			"vue/ref-macros"
-		]
+		"types": ["vue/ref-macros"]
 	},
 	"include": ["./src", "./typings"]
 }
