--- a/vue3-spinners/tsconfig.eslint.json
+++ b/vue3-spinners/tsconfig.eslint.json
@@ -1,4 +1,10 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["src", "test", "scripts", ".eslintrc.cjs", "vitest.config.ts"]
+	"include": [
+		"src",
+		"test",
+		"typings",
+		".eslintrc.cjs",
+		"vitest.config.ts"
+	]
 }
