--- a/vue3-spinners/tsconfig.json
+++ b/vue3-spinners/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@leonzalion/configs/tsconfig.json",
+	"extends": "../tsconfig.json",
 	"compilerOptions": {
 		"outDir": "dist",
 		"baseUrl": ".",
