chore: fix script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dev:demo": "pnpm run dev --filter=./demo",
 		"lint": "pnpm recursive run lint",
 		"prettier": "pnpm recursive run prettier",
-		"tc": "pnpm recursive run tc"
+		"typecheck": "pnpm recursive run tc"
 	},
 	"devDependencies": {
 		"@leonzalion/configs": "^1.2.25",
