--- a/packages/vue3-spinners/package.json
+++ b/packages/vue3-spinners/package.json
@@ -23,42 +23,48 @@
 	"license": "MIT",
 	"author": {
 		"name": "Leon Si",
-		"email": "contact@leonzalion.com",
-		"url": "https://leonzalion.com"
+		"email": "contact@leonsilicon.com",
+		"url": "https://leonsilicon.com"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/leonzalion/vue3-spinners.git"
+		"url": "https://github.com/leonsilicon/vue3-spinners.git"
 	},
-	"homepage": "https://github.com/leonzalion/vue3-spinners#readme",
-	"exports": "./src/index.js",
+	"homepage": "https://github.com/leonsilicon/vue3-spinners#readme",
+	"exports": {
+		"default": "./dist/index.mjs",
+		"types": "./dist/index.d.ts"
+	},
 	"scripts": {
-		"build": "node-ts ./scripts/build.ts",
-		"start": "node-ts ./src/index.ts"
+		"build": "unbuild && tsc-alias dist",
+		"start": "bun ./src/index.ts"
 	},
 	"peerDependencies": {
 		"vue": "^3"
 	},
 	"dependencies": {
 		"colornames": "^1.1.1",
+		"compile-vue-sfc": "^0.2.0",
 		"just-range": "^4.0.1",
 		"just-zip-it": "^3.0.2",
 		"outdent": "^0.8.0",
 		"parse-unit": "^1.0.1",
-		"style-inject": "^0.3.0"
+		"style-inject": "^0.3.0",
+		"unplugin-vue": "^6.0.1"
 	},
 	"devDependencies": {
 		"@types/colornames": "^1.1.2",
 		"@types/parse-unit": "^1.0.1",
 		"@types/style-inject": "^0.3.0",
-		"@vue/runtime-core": "^3.2.33",
-		"compile-vue-sfc": "^0.2.0",
+		"@vue/runtime-core": "^3.5.13",
 		"desm": "^1.2.0",
 		"execa": "^6.1.0",
 		"globby": "^13.1.1",
-		"typescript": "^4.6.4",
-		"vitest": "^0.12.4",
-		"vue": "^3.2.33"
+		"typescript": "^5.8.3",
+		"unbuild": "^3.5.0",
+		"vitest": "^3.1.1",
+		"vue": "^3.5.13",
+		"vue-macros": "^3.0.0-beta.7"
 	},
 	"publishConfig": {
 		"directory": "dist"
