--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -8,14 +8,14 @@
 	},
 	"dependencies": {
 		"vue": "^3.2.25",
-		"vue3-spinners": "link:../vue3-spinners/dist",
-		"windicss": "^3.5.1"
+		"vue3-spinners": "workspace:*",
+		"windicss": "^3.5.6"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^2.3.1",
-		"typescript": "^4.6.3",
-		"vite": "^2.9.5",
-		"vite-plugin-windicss": "^1.8.4",
-		"vue-tsc": "^0.34.7"
+		"@vitejs/plugin-vue": "^4.3.1",
+		"typescript": "^5.8.3",
+		"vite": "^4.3.1",
+		"vite-plugin-windicss": "^1.9.4",
+		"vue-tsc": "^2.2.8"
 	}
 }
