--- a/packages/vue3-spinners/package.json
+++ b/packages/vue3-spinners/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vue3-spinners",
 	"type": "module",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"description": "Spinners for Vue 3.",
 	"keywords": [
 		"vue-spinners",
@@ -66,7 +66,9 @@
 		"vue": "^3.5.13",
 		"vue-macros": "^3.0.0-beta.7"
 	},
-	"publishConfig": {
-		"directory": "dist"
-	}
+	"files": [
+    "src",
+		"dist",
+    "readme.md"
+	]
 }
