--- a/packages/vue3-spinners/package.json
+++ b/packages/vue3-spinners/package.json
@@ -36,7 +36,7 @@
 		"types": "./dist/index.d.ts"
 	},
 	"scripts": {
-		"build": "unbuild && tsc-alias dist",
+		"build": "unbuild",
 		"start": "bun ./src/index.ts"
 	},
 	"peerDependencies": {
